--- a/STDIO_dotNet/STDIO_dotNet/Views/Major/Index.cshtml
+++ b/STDIO_dotNet/STDIO_dotNet/Views/Major/Index.cshtml
@@ -7,15 +7,18 @@
 <div class="text-center">
 
 <h1 class="display-4"> Major Info </h1>
+<h3 style="color: red">@ViewData["msg"]</h3>
     
     <div class="function-container">
-            <div class="add-student">
+            <div class="add-major" data-toggle="modal" data-target="#createModal">
                 <i class="bi bi-plus-circle"></i>
                 <span>Add Major</span>
             </div>
             <div class="search">
-                <i class="bi bi-search"></i>
-                <input type="search" id="search" name="search" placeholder="Search major...">
+                <form class="d-flex" asp-action="Search" asp-controller="Major">
+                    <input type="search" class="form-control" name="name" placeholder="Search major...">
+                    <button class="btn btn-primary ml-2" type="submit"> <i class="bi bi-search"></i></button>
+                </form>
             </div>
     </div>
 
@@ -29,22 +32,63 @@
             </tr>
         </thead>
         <tbody>
-            @foreach(var major in Model.GetMajorList())
+            @foreach(var major in @ViewData["MH"] as List<Major>)
             {
                 <tr>
                     <td>@major.ClassID</td>
                     <td>@major.MajorName</td>
                     <td>@major.MajorID</td>
                     <td>
-                        <span class="option">
+                        <a class="option" asp-controller="Major" asp-action="Edit" asp-route-id="@major.ClassID">
                             <i class="bi bi-pencil"></i>
-                        </span>
-                        <span class="option">
+                        </a>
+                        <a class="option" asp-controller="Major" asp-action="Delete" asp-route-id="@major.ClassID">
                             <i class="bi bi-trash3"></i>
-                        </span>                    
+                        </a>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
+</div>
+
+@*Modal*@
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModal" aria-hidden="true">
+    <form asp-action="Create" asp-controller="Major" method="post">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="createModalLabel">Thêm mới ngành học</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+              <div class="form-group row">
+                <label for="ClassID" class="col-sm-2 col-form-label">Class ID</label>
+                <div class="col-sm-10">
+                  <input type="text"  class="form-control" name="ClassID" required>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="MajorName" class="col-sm-2 col-form-label">Tên ngành</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" name="MajorName" required>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="MajorID" class="col-sm-2 col-form-label">ID ngành học</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" name="MajorID" required>
+                </div>
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </form>
 </div>
