--- a/STDIO_dotNet/STDIO_dotNet/Views/University/Index.cshtml
+++ b/STDIO_dotNet/STDIO_dotNet/Views/University/Index.cshtml
@@ -7,15 +7,18 @@
 <div class="text-center">
 
     <h1 class="display-4"> University Info </h1>
+    <h3 style="color: red">@ViewData["msg"]</h3>
 
     <div class="function-container">
-            <div class="add-student">
+            <div class="add-university" data-toggle="modal" data-target="#createModal">
                 <i class="bi bi-plus-circle"></i>
                 <span>Add University</span>
             </div>
             <div class="search">
-                <i class="bi bi-search"></i>
-                <input type="search" id="search" name="search" placeholder="Search university...">
+                <form class="d-flex" asp-action="Search" asp-controller="University">
+                    <input type="search" class="form-control" name="name" placeholder="Search university...">
+                    <button class="btn btn-primary ml-2" type="submit"> <i class="bi bi-search"></i></button>
+                </form>
             </div>
     </div>
     
@@ -29,22 +32,64 @@
         </tr>
         </thead>
         <tbody>
-            @foreach(var university in Model.GetUniversityList())
+            @foreach(var university in @ViewData["UH"] as List<University>)
             {
                 <tr>
                     <td>@university.UniversityID</td>
                     <td>@university.UniversityName</td>
                     <td>@university.UniversityAbbr</td>
                     <td>
-                        <span class="option">
+                        <a class="option" asp-controller="University" asp-action="Edit" asp-route-id="@university.UniversityID">
                             <i class="bi bi-pencil"></i>
-                        </span>
-                        <span class="option">
+                        </a>
+                        <a class="option" asp-controller="University" asp-action="Delete" asp-route-id="@university.UniversityID">
                             <i class="bi bi-trash3"></i>
-                        </span>                    
+                        </a>                  
                     </td>
                 </tr>
             }
         </tbody>
     </table>
+</div>
+
+
+@*Modal*@
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModal" aria-hidden="true">
+    <form asp-action="Create" asp-controller="University" method="post">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="createModalLabel">Thêm mới trường đại học</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+
+              <div class="form-group row">
+                <label for="ClassID" class="col-sm-2 col-form-label">University ID</label>
+                <div class="col-sm-10">
+                  <input type="text"  class="form-control" name="UniversityID" required>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="MajorName" class="col-sm-2 col-form-label">University Name</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" name="UniversityName" required>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="MajorID" class="col-sm-2 col-form-label">University Abbr</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" name="UniversityAbbr" required>
+                </div>
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </form>
 </div>
