--- a/STDIO_dotNet/STDIO_dotNet/wwwroot/css/function_search.css
+++ b/STDIO_dotNet/STDIO_dotNet/wwwroot/css/function_search.css
@@ -22,7 +22,9 @@
     outline: none;
 }
 
-.add-student {
+.add-student,
+.add-major, 
+.add-university {
     box-shadow: 1px 2px #ccc;
     cursor: pointer;
     padding: 4px;
@@ -32,4 +34,9 @@
     padding: 0 4px;
     margin: 0 4px;
     cursor: pointer;
+    text-decoration: none;
+}
+
+.option:hover {
+    text-decoration: none;
 }
